src/lexer/snapshots/enderpy__lexer__lexer__tests__raw-f-string-literals-2.snap
---
source: src/lexer/lexer.rs
description: "rf\"\""
---
[
    Token {
        kind: RawFString,
        value: Str(
            "rf\"\"",
        ),
        start: 0,
        end: 4,
    },
]
