src/lexer/snapshots/enderpy__lexer__lexer__tests__raw-f-string-literals-3.snap
---
source: src/lexer/lexer.rs
description: "a = rf\"hello\""
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: RawFString,
        value: Str(
            "rf\"hello\"",
        ),
        start: 4,
        end: 13,
    },
]
