src/lexer/snapshots/enderpy__lexer__lexer__tests__raw-f-string-literals-4.snap
---
source: src/lexer/lexer.rs
description: "rf'hello_{var}'"
---
[
    Token {
        kind: RawFStringStart,
        value: Str(
            "rf'",
        ),
        start: 0,
        end: 3,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "hello_",
        ),
        start: 3,
        end: 9,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: Identifier,
        value: Str(
            "var",
        ),
        start: 10,
        end: 13,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 13,
        end: 14,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "'",
        ),
        start: 14,
        end: 15,
    },
]
