src/lexer/snapshots/enderpy__lexer__lexer__tests__raw-string-literals-3.snap
---
source: src/lexer/lexer.rs
description: "a = r\"hello\""
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: RawString,
        value: Str(
            "r\"hello\"",
        ),
        start: 4,
        end: 12,
    },
]
