src/lexer/snapshots/enderpy__lexer__lexer__tests__raw-string-literals-6.snap
---
source: src/lexer/lexer.rs
description: "r'''hello'''"
---
[
    Token {
        kind: RawString,
        value: Str(
            "r'''hello'''",
        ),
        start: 0,
        end: 12,
    },
]
