src/lexer/snapshots/enderpy__lexer__lexer__tests__string-literals-0.snap
---
source: src/lexer/lexer.rs
description: "\"hello\""
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "\"hello\"",
        ),
        start: 0,
        end: 7,
    },
]
